media/tautulli/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tautulli
  namespace: media
  annotations:
    flux.weave.works/tag.tautulli: regexp:^[0-9]+$
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      volumes:
      - name: tautulli
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:tautulli
          targetPortal: nas1-storage.radoncanyon.com
          lun: 0
      - name: pms
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:pms
          targetPortal: nas1-storage.radoncanyon.com
          lun: 0
          readOnly: true
      containers:
      - name: tautulli
        image: linuxserver/tautulli:162
        volumeMounts:
        - name: tautulli
          subPath: config
          mountPath: /config
        - name: pms
          subPath: config/Library/Application Support/Plex Media Server/Logs
          mountPath: /logs
          readOnly: true
        ports:
        - name: tautulli
          containerPort: 8181
        readinessProbe:
          tcpSocket:
            port: tautulli
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: tautulli
          initialDelaySeconds: 15
          periodSeconds: 20
