media/tautulli/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: media
  labels:
    app: tautulli
    version: v1
spec:
  serviceName: tautulli
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
      version: v1
  template:
    metadata:
      labels:
        app: tautulli
        version: v1
    spec:
      dnsConfig:
        options:
        - name: ndots
          value: "1"

      volumes:
        - name: tautulli
          persistentVolumeClaim:
            claimName: tautulli-pv-claim
        - name: logs
          persistentVolumeClaim:
            claimName: logs

      containers:
      - name: tautulli
        # IMAGE=ghcr.io/linuxserver/tautulli; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | sort -V | tail -n1
        image: ghcr.io/linuxserver/tautulli:version-v2.15.2
        # image: alpine
        # command: ["sleep"]
        # args: ["infinity"]

        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            # cpu: "500m"
            memory: "512Mi"

        volumeMounts:
        - name: tautulli
          mountPath: /config
        - name: logs
          mountPath: /logs-pms
          subPath: pms
          readOnly: true

        ports:
        - name: http
          containerPort: 8181

        livenessProbe:
          httpGet:
            path: /status
            port: http
          periodSeconds: 15
          initialDelaySeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6

        readinessProbe:
          httpGet:
            path: /status
            port: http
          periodSeconds: 15
          initialDelaySeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
