media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
  labels:
    app: tautulli
    version: v1
spec:
  selector:
    app: tautulli
    version: v1
  ports:
  - name: http-tautulli
    port: 8181
    protocol: TCP
  - name: http-exporter
    port: 9487
    protocol: TCP
