media/tautulli/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-tailscale
  namespace: media
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - bustling-goat
  defaultBackend:
    service:
      name: tautulli
      port:
        name: http
  ingressClassName: tailscale
