media/tautulli/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/auth-tls-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "yes"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - d.desertbluffs.com
  rules:
    - host: d.desertbluffs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  number: 8181
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-tautulli
  namespace: media
  annotations: {}
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - d.radoncanyon.com
  rules:
    - host: d.radoncanyon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  number: 8181
