media/tautulli/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: tautulli
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: tautulli
  ingress:
  - ports:
    - port: 8181
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    - podSelector:
        matchLabels:
          app: heimdall
