media/tautulli/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: tautulli
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: tautulli
  ingress:
  - ports:
    - port: 8181
    - port: 9487
    from: []
